ingress_test/deploy-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catlog-deployment
  labels:
    app: catlog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catlog
  template:
    metadata:
      labels:
        app: catlog
    spec:
      containers:
      - name: catlog
        image: pramodkumarpanda/catlog:4.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: catlog-svc
spec:
  selector:
    app: catlog
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
