ingress_test/deploy1-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-deployment
  labels:
    app: login
spec:
  replicas: 1
  selector:
    matchLabels:
      app: login
  template:
    metadata:
      labels:
        app: login
    spec:
      containers:
      - name: login
        image: pramodkumarpanda/login:4.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: login-svc
spec:
  selector:
    app: login
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
